   - If your world previously contained ADDSynth Material Amethyst or Amethyst Blocks,
      those will automatically be replaced with vanilla Amethyst Shards and Amethyst Blocks.
  Removed Null Block back to Void Crystals crafting recipe.
   - Since you're probably not supposed to interact with an ethereal object.
FIXED:
  Fixed Jei recipes displaying items 1 pixel off in machine slots.



v1.5.1 - February 2, 2024
NEW:
  Added JEI info for Dimensional Flux.
  Added an Auto Shutoff feature to the Plasma Generator.
  Energy Suspension Bridge lengths are now shown in the gui.
CHANGES:
  Explicitly unlock the recipes for Matter/Energy Converter and Plasma Generator when you
    pick up an Energy Crystal.
REMOVED:
  Since disabling things in the config doesn't work, it has been removed.
  Batteries will no longer transfer their energy to other Batteries on the Energy network
    when their block is removed.
    - This was the behaviour since version 1.3.4.
FIXED:
  Fixed not showing a message to players that can't access the Team Manager because they
    don't have the required permission level.
  Energy Suspension Bridges:
    - Bridge lengths are now saved with the world. If players change the maximum length
        in the config and load a world with an Energy Suspension Bridge already active,
        it will check if the new maximum length is shorter and shut itself off.
    - Now bridges that are 1 block wide and powered will properly shut themselves off if removed.
    - If two bridges along the same area are powered, the bridge that was powered first will
        determine the color of the bridge and 'own' the bridge. Bridge Relation is now saved,
        meaning they maintain their color after world reload.
  Fixed elements in a gui window was not being repositioned after the game window was resized.
  Fixed not being able to insert items into the proper slots in the Magic Infuser machine.