@@ -143,6 +143,7 @@
 "commands.addsynthcore.zombie_raid.start": "Zombie Raid started. Zombies: %s, Time: %s, Distance: %s.",
 "commands.addsynthcore.zombie_raid.stop": "Zombie Raid cancelled.",
 "commands.addsynthcore.zombie_raid.occurring": "Zombie Raid is occurring. %s seconds remaining.",
+"commands.addsynthcore.zombie_raid.already_occurring": "A Zombie Raid is already occuring.",
 "commands.addsynthcore.zombie_raid.not_occurring": "No Zombie Raid is occurring.",
 "commands.addsynthcore.zombie_raid.end": "Zombie Raid is over.",
 "commands.addsynthcore.zombie_raid.win": "You won the Zombie Raid!",
